updated routes and yaml
