# openAPI.yaml
@@ -1,47 +1,46 @@
 openapi: 3.0.0
 info:
-  title: AstrologicAPI
-  description: API to get planetary positions, power scores, south node configurations, and harmony scores based on a given date, time, latitude, and longitude.
+  title: Planetary API
+  description: API to get planetary positions, power scores, and other astrological information based on date, time, latitude, and longitude.
   version: 1.0.0
 servers:
-  - url: https://ef1c-209-222-126-192.ngrok-free.app
-    description: Development server
+  - url:  https://087a-209-222-126-192.ngrok-free.app
+    description: Local server
 paths:
-  /planets:
+  /planets/natal-planets:
     get:
+      operationId: getNatalPlanets
       summary: Get planetary positions
-      operationId: getPlanets
-      tags:
-        - planets
+      description: Returns the positions of planets based on the provided date, time, latitude, and longitude.
       parameters:
         - name: date
           in: query
-          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
-          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
-          description: Latitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Latitude of the location.
         - name: lon
           in: query
-          description: Longitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Longitude of the location.
       responses:
         '200':
           description: A list of planetary positions
@@ -54,50 +53,47 @@ paths:
                     type: array
                     items:
                       type: string
-                    description: List of planetary positions
         '400':
-          description: Bad request
+          description: Bad Request, e.g., missing or invalid parameters
         '500':
-          description: Internal server error
-
+          description: Internal Server Error
   /planets/power-scores:
     get:
-      summary: Get power scores for planets
       operationId: getPowerScores
-      tags:
-        - planets
+      summary: Get planetary power scores
+      description: Returns the total power scores of planets based on the provided date, time, latitude, and longitude.
       parameters:
         - name: date
           in: query
-          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
-          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
-          description: Latitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Latitude of the location.
         - name: lon
           in: query
-          description: Longitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Longitude of the location.
       responses:
         '200':
-          description: A list of power scores
+          description: A list of planetary power scores
           content:
             application/json:
               schema:
@@ -107,50 +103,47 @@ paths:
                     type: array
                     items:
                       type: string
-                    description: List of power scores
         '400':
-          description: Bad request
+          description: Bad Request, e.g., missing or invalid parameters
         '500':
-          description: Internal server error
-
+          description: Internal Server Error
   /planets/southNode:
     get:
-      summary: Get south node configuration
       operationId: getSouthNode
-      tags:
-        - planets
+      summary: Get South Node Configuration
+      description: Returns the South Node configuration based on the provided date, time, latitude, and longitude.
       parameters:
         - name: date
           in: query
-          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
-          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
-          description: Latitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Latitude of the location.
         - name: lon
           in: query
-          description: Longitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Longitude of the location.
       responses:
         '200':
-          description: A south node configuration
+          description: South Node Configuration
           content:
             application/json:
               schema:
@@ -158,100 +151,44 @@ paths:
                 properties:
                   config:
                     type: string
-                    description: South node configuration details
         '400':
-          description: Bad request
+          description: Bad Request, e.g., missing or invalid parameters
         '500':
-          description: Internal server error
-
-  /planets/house-scores:
-    get:
-      summary: Get house scores for planets
-      operationId: getHouseScores
-      tags:
-        - planets
-      parameters:
-        - name: date
-          in: query
-          description: Date in YYYY-MM-DD format.
-          required: true
-          schema:
-            type: string
-            format: date
-        - name: time
-          in: query
-          description: Time in HH:MM:SS format.
-          required: true
-          schema:
-            type: string
-            format: time
-        - name: lat
-          in: query
-          description: Latitude.
-          required: true
-          schema:
-            type: number
-            format: double
-        - name: lon
-          in: query
-          description: Longitude.
-          required: true
-          schema:
-            type: number
-            format: double
-      responses:
-        '200':
-          description: A list of house scores
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  scores:
-                    type: array
-                    items:
-                      type: string
-                    description: List of house scores
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
-
+          description: Internal Server Error
   /planets/sign-scores:
     get:
-      summary: Get sign scores for planets
       operationId: getSignScores
-      tags:
-        - planets
+      summary: Get Sign Scores
+      description: Returns the sign scores based on the provided date, time, latitude, and longitude.
       parameters:
         - name: date
           in: query
-          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
-          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
-          description: Latitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Latitude of the location.
         - name: lon
           in: query
-          description: Longitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Longitude of the location.
       responses:
         '200':
           description: A list of sign scores
@@ -264,47 +201,194 @@ paths:
                     type: array
                     items:
                       type: string
-                    description: List of sign scores
         '400':
-          description: Bad request
+          description: Bad Request, e.g., missing or invalid parameters
         '500':
-          description: Internal server error
-
-  /planets/planet-harmony:
+          description: Internal Server Error
+  /planets/house-scores:
     get:
-      summary: Get planet harmony scores
-      operationId: getPlanetHarmonyScores
-      tags:
-        - planets
+      operationId: getHouseScores
+      summary: Get House Scores
+      description: Returns the house scores based on the provided date, time, latitude, and longitude.
       parameters:
         - name: date
           in: query
-          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
-          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
-          description: Latitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Latitude of the location.
         - name: lon
           in: query
-          description: Longitude.
           required: true
           schema:
             type: number
-            format: double
+            format: float
+          description: Longitude of the location.
+      responses:
+        '200':
+          description: A list of house scores
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  scores:
+                    type: array
+                    items:
+                      type: string
+        '400':
+          description: Bad Request, e.g., missing or invalid parameters
+        '500':
+          description: Internal Server Error
+  /planets/house-harmony:
+    get:
+      operationId: getHouseHarmony
+      summary: Get House Harmony Scores
+      description: Returns the house harmony scores based on the provided date, time, latitude, and longitude.
+      parameters:
+        - name: date
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
+        - name: time
+          in: query
+          required: true
+          schema:
+            type: string
+            format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
+        - name: lat
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Latitude of the location.
+        - name: lon
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Longitude of the location.
+      responses:
+        '200':
+          description: A list of house harmony scores
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  scores:
+                    type: array
+                    items:
+                      type: string
+        '400':
+          description: Bad Request, e.g., missing or invalid parameters
+        '500':
+          description: Internal Server Error
+  /planets/sign-harmony:
+    get:
+      operationId: getSignHarmony
+      summary: Get Sign Harmony Scores
+      description: Returns the sign harmony scores based on the provided date, time, latitude, and longitude.
+      parameters:
+        - name: date
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
+        - name: time
+          in: query
+          required: true
+          schema:
+            type: string
+            format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
+        - name: lat
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Latitude of the location.
+        - name: lon
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Longitude of the location.
+      responses:
+        '200':
+          description: A list of sign harmony scores
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  scores:
+                    type: array
+                    items:
+                      type: string
+        '400':
+          description: Bad Request, e.g., missing or invalid parameters
+        '500':
+          description: Internal Server Error
+  /planets/planet-harmony:
+    get:
+      operationId: getPlanetHarmony
+      summary: Get Planet Harmony Scores
+      description: Returns the planet harmony scores based on the provided date, time, latitude, and longitude.
+      parameters:
+        - name: date
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
+        - name: time
+          in: query
+          required: true
+          schema:
+            type: string
+            format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
+        - name: lat
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Latitude of the location.
+        - name: lon
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Longitude of the location.
       responses:
         '200':
           description: A list of planet harmony scores
@@ -317,12 +401,60 @@ paths:
                     type: array
                     items:
                       type: string
-                    description: List of planet harmony scores
         '400':
-          description: Bad request
+          description: Bad Request, e.g., missing or invalid parameters
         '500':
-          description: Internal server error
-
+          description: Internal Server Error
+  /planets/natal-aspects:
+    get:
+      operationId: getNatalAspects
+      summary: Get Natal Aspects
+      description: Returns the natal aspects based on the provided date, time, latitude, and longitude.
+      parameters:
+        - name: date
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+          description: Date in ISO 8601 format (YYYY-MM-DD).
+        - name: time
+          in: query
+          required: true
+          schema:
+            type: string
+            format: time
+          description: Time in ISO 8601 format (HH:MM:SS).
+        - name: lat
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Latitude of the location.
+        - name: lon
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Longitude of the location.
+      responses:
+        '200':
+          description: A list of natal aspects
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  scores:
+                    type: array
+                    items:
+                      type: string
+        '400':
+          description: Bad Request, e.g., missing or invalid parameters
+        '500':
+          description: Internal Server Error
 components:
   schemas:
     PlanetaryPositionsResponse:
